--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
       <header class="main-header">
@@ -30,7 +30,7 @@
                     </ul>
                 </nav>
                 <div class="basket-block">
-                    <a class="basket" href="#">Корзина</a>
+                    <a class="basket icon-basket" href="#">Корзина</a>
                 </div>
             </div>
         </header>
@@ -44,9 +44,21 @@
                 <form class="filter" action="#" method="get">                    
                     <h2 class="filter-h2">Стоимость</h2>
                     <div class="filter-block">
-                        <input class="filter-range" type="range" min="0" max="15000" step="1" value="15000">
-                        <input class="filter-minprice" type="text" value="0">
-                        <input class="filter-maxprice" type="text" value="15000">
+                        <div class="range-controls">
+                            <div class="scale">
+                                <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                            </div>                            
+                            <div class="toggle min-toggle"></div>
+                            <div class="toggle max-toggle"></div>
+                        </div>
+                        <div class="price-controls">
+                            <label class="min-price">
+                                от <input name="min-price" type="text" value="0">
+                            </label>
+                            <label class="max-price">
+                                до <input name="max-price" type="text" value="15000">
+                            </label>
+                        </div>
                     </div>
                     <div class="filter-block">
                         <h2 class="filter-h2">Сетка:</h2>
@@ -83,77 +95,65 @@
             </div>
             <div class="catalog clearfix">
                 <div class="sorting clearfix">                    
-                    <span class="sorting-title">Сортировать:</span>                   
-                    <div class="sorting-type">
+                    <div class="sorting-type">    
+                        <span class="sorting-title">Сортировать:</span>                   
                         <a href="#" class="sort">по цене</a>
                         <a href="#" class="sort">по типу</a>
                         <a href="#" class="sort">по функционалу</a>
                     </div>
                     <div class="sorting-dir">
-                        <a href="#" class="up"></a>
-                        <a href="#" class="down"></a>
+                        <a href="#" class="dir-a dir-active"><span class="sorting-icon icon-down-dir"></span></a>
+                        <a href="#" class="dir-a"><span class="sorting-icon icon-up-dir"></span></a>
                     </div>
                 </div>        
                 <div class="products-list clearfix">
                     <div class="products">
                         <img src="img/products-aviator.jpg" width="240" height="240" alt="Aviator">
-                        <!--
                         <div class="products-info">
                             <h3 class="products-title">Aviator</h3>
-                            <p>Одностраничный макет с авторским дизайном</p>
+                            <p>Одностраничный макет<br> с авторским дизайном</p>
                             <a href="#" class="btn products-btn">8000 р.</a>
                         </div>
-                        -->
                     </div>
                     <div class="products">
-                        <img src="img/products-sunset.jpg" width="240" height="240" alt="Sunset">
-                        <!--
-                        <div class="products-info">
+                        <img src="img/products-sunset.jpg" width="240" height="240" alt="Sunset">                        
+                        <div class="products-info sunset-info">
                             <h3 class="products-title">Sunset</h3>
-                            <p>Интернет-магазин с личным кабинетом</p>
+                            <p>Интернет-магазин<br> с личным кабинетом</p>
                             <a href="#" class="btn products-btn">10000 р.</a>
                         </div>
-                        -->
                     </div>
                     <div class="products">
                         <img src="img/products-forte.jpg" width="240" height="240" alt="Forte">
-                        <!--
                         <div class="products-info">
                             <h3 class="products-title">Forte</h3>
-                            <p>Отличный макет для личного блога</p>
+                            <p>Отличный макет<br> для личного блога</p>
                             <a href="#" class="btn products-btn">5000 р.</a>
                         </div>
-                        -->
                     </div>
                     <div class="products">
                         <img src="img/products-modernorganic.jpg" width="240" height="240" alt="Modern organic thai">
-                        <!--
                         <div class="products-info">
                             <h3 class="products-title">Modern organic thai</h3>
-                            <p>Сайт для ресторана быстрого питания</p>
+                            <p>Сайт для ресторана<br> быстрого питания</p>
                             <a href="#" class="btn products-btn">12000 р.</a>
                         </div>
-                        -->
                     </div>
                     <div class="products">
                         <img src="img/products-avenue.jpg" width="239" height="240" alt="Avenue">
-                        <!--
                         <div class="products-info">
                             <h3 class="products-title">Avenue</h3>
-                            <p>Макет для блога о путешествиях</p>
+                            <p>Макет для блога<br> о путешествиях</p>
                             <a href="#" class="btn products-btn">8000 р.</a>
                         </div>
-                        -->
                     </div>
                     <div class="products">
                         <img src="img/products-dovetail.jpg" width="239" height="240" alt="Dovetail">
-                        <!--
                         <div class="products-info">
                             <h3 class="products-title">Dovetail</h3>
-                            <p>Интернет-магазин с галереей товаров</p>
+                            <p>Интернет-магазин<br> с галереей товаров</p>
                             <a href="#" class="btn products-btn">14000 р.</a>
                         </div>
-                        -->
                     </div>
                 </div>
                 <nav class="products-navigation">
@@ -189,10 +189,10 @@
             <div class="footer-social">                    
                <div class="container clearfix"> 
                     <div class="social-icon">
-                        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-                        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-                        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-                    </div>    
+                        <a class="social-btn" href="#">Вконтакте <span class="icon-vk"></span></a>
+                        <a class="social-btn" href="#">Фейсбук <span class="icon-facebook"></span></a>
+                        <a class="social-btn" href="#">Инстаграм <span class="icon-instagramm"></span></a>
+                    </div>  
                     <div class="social-tagline">
                         <p class="social-title">Давайте дружить, это выгодно!</p>
                         <p>Скидка 10% для друзей из социальных сетей.</p>
