--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HTML Academy: Нёрдс</title>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300&subset=cyrillic" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="slider-items clearfix">
                         <div class="slider-text">
-                            <h3>Любите ли вы математику,<br> как любим ее мы</h3>
+                            <h3>Любите ли вы математику,<br> как любим ее мы?</h3>
                             <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br> за креатив, чтобы дать им возможность все просчитать</p>
                             <a href="#" class="btn slider-btn">Узнать больше</a>
                         </div>
@@ -114,15 +114,15 @@
                 <div class="about-block clearfix">
                     <div class="about-left">
                         <h3>Выполняем заказы на разработку:</h3>
-                        <ul>
+                        <ul class="about-ul">
                             <li>веб-сайтов любой сложности</li>
                             <li>Мобильных приложений для iOS и Android</li>
-                            <li>Слайдшоу и видел для корпоративных презентаций</li>
+                            <li>Слайдшоу и видео для корпоративных презентаций</li>
                         </ul>
                     </div> 
                     <div class="about-right">
                         <h3>Как мы работаем:</h3>
-                        <ul>
+                        <ul class="about-ul">
                             <li>С самоотдачей 146%</li>
                             <li>Соблюдая сроки на 100%</li>
                             <li>По предоплате 50%</li>
@@ -152,9 +152,9 @@
             <div class="footer-social">                    
                <div class="container clearfix"> 
                     <div class="social-icon">
-                        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-                        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-                        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+                        <a class="social-btn" href="#">Вконтакте <span class="icon-vk"></span></a>
+                        <a class="social-btn" href="#">Фейсбук <span class="icon-facebook"></span></a>
+                        <a class="social-btn" href="#">Инстаграм <span class="icon-instagramm"></span></a>
                     </div>    
                     <div class="social-tagline">
                         <p class="social-title">Давайте дружить, это выгодно!</p>
