--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -159,7 +159,7 @@
                 <nav class="products-navigation">
                     <ul>
                         <li>
-                            <a class="products-navigation-btn" href="#">1</a>
+                            <a class="products-navigation-btn active" href="#">1</a>
                         </li>
                         <li>
                             <a class="products-navigation-btn" href="#">2</a>
@@ -168,7 +168,7 @@
                             <a class="products-navigation-btn" href="#">3</a>
                         </li>
                         <li>
-                            <a class="products-navigation-btn products-navigation-next" href="#">Следующая</a>
+                            <a class="products-navigation-btn next" href="#">Следующая</a>
                         </li>
                     </ul>
                 </nav>
