--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
       <header class="main-header">
@@ -62,31 +62,31 @@
                     </div>
                     <div class="filter-block">
                         <h2 class="filter-h2">Сетка:</h2>
-                        <label>
+                        <label class="label-radio">
                             <input class="filter-radio" type="radio" name="grid" value="adaptive"> <span>Адаптивная</span>
                         </label>
-                        <label>
+                        <label class="label-radio">
                             <input class="filter-radio" type="radio" name="grid" value="fixed"> <span>Резиновая</span>
                         </label>
-                        <label>
+                        <label class="label-radio">
                             <input class="filter-radio" type="radio" name="grid" value="rubber"> <span>Резиновая</span>
                         </label>          
                     </div>
                     <div class="filter-block">
                         <h2 class="filter-h2">Особенности:</h2>                        
-                        <label>
+                        <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="slider"> <span>Слайдер</span>
                         </label>
-                        <label>
+                        <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="advantages-block"> <span>Блок преимуществ</span>
                         </label>
-                        <label>
+                        <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="news"> <span>Новости</span>
                         </label>
-                        <label>
+                        <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="gallery"> <span>Галерея</span>
                         </label>
-                        <label>
+                        <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="basket"> <span>Корзина</span>
                         </label>                        
                     </div>
@@ -134,8 +134,8 @@
                     <div class="products">
                         <img src="img/products-modernorganic.jpg" width="240" height="240" alt="Modern organic thai">
                         <div class="products-info">
-                            <h3 class="products-title">Modern organic thai</h3>
-                            <p>Сайт для ресторана<br> быстрого питания</p>
+                            <h3 class="products-title title-2line">Modern organic<br> thai</h3>
+                            <p class="p-2line">Сайт для ресторана<br> быстрого питания</p>
                             <a href="#" class="btn products-btn">12000 р.</a>
                         </div>
                     </div>
