--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -102,8 +102,8 @@
                         <a href="#" class="sort">по функционалу</a>
                     </div>
                     <div class="sorting-dir">
-                        <a href="#" class="dir-a dir-active"><span class="sorting-icon icon-down-dir"></span></a>
-                        <a href="#" class="dir-a"><span class="sorting-icon icon-up-dir"></span></a>
+                        <a href="#" class="dir-a dir-active dir-desk"></a>
+                        <a href="#" class="dir-a dir-ask"></a>
                     </div>
                 </div>        
                 <div class="products-list clearfix">
