--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="about-left">
                         <h3>Выполняем заказы на разработку:</h3>
                         <ul class="about-ul">
-                            <li>веб-сайтов любой сложности</li>
+                            <li>Веб-сайтов любой сложности</li>
                             <li>Мобильных приложений для iOS и Android</li>
                             <li>Слайдшоу и видео для корпоративных презентаций</li>
                         </ul>
