ну вот и почти все
Осталось только сменить цвет заменяющего шрифта

--- a/index.html
+++ b/index.html
@@ -162,6 +162,26 @@
                     </div>
                 </div>  
             </div>                       
-        </footer>      
+        </footer>
+        <div class="modal-content">
+            <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+            <form class="feedback" action="#" method="post">
+                <div class="user-contacts-block clearfix">
+                    <div class="user-name-block">
+                        <p>Ваше имя:</p>
+                        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+                    </div>
+                    <div class="user-email-block">
+                        <p>Ваш e-mail:</p>
+                        <input class="email" type="text" name="email" placeholder="Для отправки ответа">
+                    </div>
+                </div>
+                <div class="user-letter-block">
+                    <p>Текст письма:</p>
+                    <textarea class="letter" name="letter" placeholder="в свободной форме"></textarea>
+                    <button class="btn" type="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
   </body>
 </html>
