--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -63,7 +63,7 @@
                     <div class="filter-block">
                         <h2 class="filter-h2">Сетка:</h2>
                         <label class="label-radio">
-                            <input class="filter-radio" type="radio" name="grid" value="adaptive"> <span>Адаптивная</span>
+                            <input class="filter-radio" type="radio" name="grid" value="adaptive" checked> <span>Адаптивная</span>
                         </label>
                         <label class="label-radio">
                             <input class="filter-radio" type="radio" name="grid" value="fixed"> <span>Резиновая</span>
@@ -75,13 +75,13 @@
                     <div class="filter-block">
                         <h2 class="filter-h2">Особенности:</h2>                        
                         <label class="label-checkbox">
-                            <input class="filter-checkbox" type="checkbox" name="features" value="slider"> <span>Слайдер</span>
+                            <input class="filter-checkbox" type="checkbox" name="features" value="slider" checked> <span>Слайдер</span>
                         </label>
                         <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="advantages-block"> <span>Блок преимуществ</span>
                         </label>
                         <label class="label-checkbox">
-                            <input class="filter-checkbox" type="checkbox" name="features" value="news"> <span>Новости</span>
+                            <input class="filter-checkbox" type="checkbox" name="features" value="news" checked> <span>Новости</span>
                         </label>
                         <label class="label-checkbox">
                             <input class="filter-checkbox" type="checkbox" name="features" value="gallery"> <span>Галерея</span>
@@ -199,6 +199,26 @@
                     </div>
                 </div>  
             </div>                       
-        </footer>
+      </footer>
+      <div class="modal-content">
+            <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+            <form class="feedback" action="#" method="post">
+                <div class="user-contacts-block clearfix">
+                    <div class="user-name-block">
+                        <p>Ваше имя:</p>
+                        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+                    </div>
+                    <div class="user-email-block">
+                        <p>Ваш e-mail:</p>
+                        <input class="email" type="text" name="email" placeholder="Для отправки ответа">
+                    </div>
+                </div>
+                <div class="user-letter-block">
+                    <p>Текст письма:</p>
+                    <textarea class="letter" name="letter" placeholder="в свободной форме"></textarea>
+                    <button class="btn" type="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
